--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/icon2.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -23,7 +24,7 @@
             <img
               class="mb-5"
               width="100px"
-              src="/warning-256.png"
+              src="img/warning-256.png"
               alt="warning-image"
             />
             <p class="fw-bold">Please Fill All Information Correctly</p>
